package ar.edu.utn.frba.dds.hasheo;

public interface EstrategiaHash {
  public abstract String hashear(String password);
}
