package ar.edu.utn.frba.dds.validacion;

import java.util.List;

public interface ObtenerListaString {
  public abstract List<String> obtenerLista();
}
