@startuml
skinparam linetype ortho

interface ValidadorUsuario{
    + validar(usuario: Usuario, password: String) : boolean
}

ValidadorUsuarioConcreto ..|> ValidadorUsuario

class ValidadorUsuarioConcreto{
    - estrategiasValidacion: List<EstrategiaValidacion>
    + validar(usuario: Usuario, password: String) : boolean
}
ValidadorUsuarioConcreto -left-> "1..*" EstrategiaValidacion

interface EstrategiaValidacion {
    + validar(cadena: String) : boolean
}

class EstrategiaValidacionRegExp {
    - patron: RegExp
    + validar(cadena: String) : boolean
}
EstrategiaValidacionRegExp .up.|> EstrategiaValidacion

class EstrategiaValidacionNoEstaEnLista{
    - obtenerListaString: ObtenerListaString
    + EstrategiaValidacionNoEstaEnLista(listaEn: ObtenerListaString)
    + validar(cadena: String) : boolean
}
EstrategiaValidacionNoEstaEnLista -down-> ObtenerListaString
EstrategiaValidacionNoEstaEnLista ..|> EstrategiaValidacion

interface ObtenerListaString {
    + obtenerLista() : List<String>
}

class ObtenerTopPeoresPasswordsURL {
    - url: String
    - lista: List<String>
    + obtenerLista() : List<String>
}
ObtenerTopPeoresPasswordsURL .up.|> ObtenerListaString

interface EstrategiaHash {
    + hashear(password: String) : String
}

class HashPBKDF2{
    - salt: byte[]
    - costo: int
    + hashear(password: String) : String
    - genSalt() : byte[]
    - genCosto() : int
}
HashPBKDF2 ..|> EstrategiaHash


@enduml